--- a/.elasticbeanstalk/config.yml
+++ b/.elasticbeanstalk/config.yml
@@ -3,6 +3,8 @@ branch-defaults:
     environment: StoreREST2-dev
   master:
     environment: StoreREST2-dev
+  my-branch:
+    environment: StoreREST2-dev2
 global:
   application_name: StoreREST2
   default_ec2_keyname: null
